--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,8 +33,8 @@
 }
 
 #navbar__logo {
-    background-color: #ff8177;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-color: #80FFFF;
+    background-image: linear-gradient(to top, #FF00FF 0%, #00FFFF 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -45,9 +45,10 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
+    font-weight: 505;
 }
 
-.fa-gem {
+.fa-moon {
     margin-right: 0.5rem;
 }
 
@@ -72,6 +73,10 @@
     height: 100%;
 }
 
+.navbar__links--current {
+    color: #f77062;
+}
+
 .navbar__btn {
     display: flex;
     justify-content: center;
@@ -91,12 +96,12 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    background: #f77062;
+    background-image: linear-gradient(to top, #8080FF 0%, #40C0FF 100%);
     color: #fff;
 }
 
 .button:hover {
-    background: #4837ff;
+    background-image: linear-gradient(to top, #A060FF 0%, #60A0FF 100%);
     transition: all 0.3s ease;
 }
 
@@ -215,7 +220,7 @@
     align-items: center;
     justify-self: center;
     margin: 0 auto;
-    height: 90vh;
+    height: 80vh;
     background-color: #141414;
     z-index: 1;
     width: 100%;
@@ -224,7 +229,7 @@
 }
 
 .main__content h1 {
-    font-size: 4rem;
+    font-size: 3.75rem;
     background-color: #ff8177;
     background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
     background-size: 100%;
@@ -262,7 +267,7 @@
     margin-top: 2rem;
     cursor: pointer;
     position: relative;
-    transition: all 0.35s;
+    transition: all 0.4s;
     outline: none;
 }
 
@@ -280,8 +285,8 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: #4837ff;
-    transition: all 0.35s;
+    background-image: linear-gradient(to top, #40C0FF 0%, #8080FF 100%);
+    transition: all 0.4s;
     border-radius: 4px;
 }
 
@@ -367,7 +372,7 @@
 }
 
 .services h1 {
-    background-color: #ff8177;
+    background-color: #40C0FF;
     background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c6f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
     background-size: 100%;
     margin-bottom: 5rem;
@@ -417,7 +422,7 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    background: #f77062;
+    background: #60A0FF;
     position: absolute;
     top: 440px;
     left: 30px;
@@ -469,20 +474,6 @@
     align-items: center;
 }
 
-#footer__logo {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-}
-
-#footer__logo:hover{
-    color: #f77062;
-    transition: 0.3s ease-out;
-  }
-
 .footer__links {
     width: 100%;
     max-width: 1000px;
@@ -519,7 +510,7 @@
 }
 
 .footer__link--items a:hover {
-    color: #4837ff;
+    color: #8080FF;
     transition: 0.3s ease-out;
 }
 
@@ -533,23 +524,39 @@
     width: 100%;
 }
 
-.social__media--wrap {
+.footer__logo, .social__icons, .website__info{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1000px;
+    margin: 30px auto 0 auto;
+}
+
+#footer__logo {
+    color: #60A0FF;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
+    margin-top: 10px;
+}
+
+#footer__logo:hover{
+    color: #8080FF;
+    transition: 0.3s ease-out;
+}
+
+/* .social__media--wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 90%;
     max-width: 1000px;
     margin: 40px auto 0 auto;
-}
+} */
 
-.social__icons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 240px;
-}
-
-.social__logo {
+/* .social__logo {
     color: #fff;
     justify-self: flex-start;
     margin-left: 20px;
@@ -559,6 +566,22 @@
     display: flex;
     align-items: center;
     margin-bottom: 16px;
+} */
+
+.website__info {
+    color: #f77062;
+}
+
+.website__attribution {
+    text-decoration: none;
+    color: #f77062;
+}
+
+.social__icons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 240px;
 }
 
 .fab:hover{
@@ -586,9 +609,6 @@
     transition: 0.5s ease-out;
   }
 
-.website__rights {
-    color: #f77062;
-}
 
 @media screen and (max-width: 820px) {
     .footer__links {
@@ -596,10 +616,10 @@
     }
 
     #footer__logo {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
-    .website__rights {
+    .website__info {
         margin-bottom: 2rem;
     }
 
