--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,10 @@
     font-family: 'Kumbh Sans', sans-serif;
 }
 
+body {
+    background-color: #141414;
+}
+
 
 /* Navigation */
 
@@ -203,159 +207,6 @@
 
     #mobile-menu.is-active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
-    }
-}
-
-
-/* Hero */
-
-
-.main {
-    background-color: #141414;
-}
-
-.main__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-self: center;
-    margin: 0 auto;
-    height: 80vh;
-    background-color: #141414;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0 50px;
-}
-
-.main__content h1 {
-    font-size: 4rem;
-    background-color: #ff8177;
-    background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.main__content h2 {
-    font-size: 4rem;
-    background-color: #ff8177;
-    background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.main__content p {
-    margin-top: 1rem;
-    font-size: 2rem;
-    font-weight: 700;
-    color: #fff;
-}
-
-.main__btn {
-    font-size: 1rem;
-    background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
-    padding: 14px 32px;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    margin-top: 2rem;
-    cursor: pointer;
-    position: relative;
-    transition: all 0.4s;
-    outline: none;
-}
-
-.main__btn a {
-    position: relative;
-    z-index: 2;
-    color: #fff;
-    text-decoration: none;
-}
-
-.main__btn:after {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background-image: linear-gradient(to top, #40C0FF 0%, #8080FF 100%);
-    transition: all 0.4s;
-    border-radius: 4px;
-}
-
-.main__btn:hover {
-    color: #fff;
-}
-
-.main__btn:hover:after {
-    width: 100%;
-}
-
-.main__img--container {
-    text-align: center;
-}
-
-#main__img {
-    height: 80%;
-    width: 80%;
-}
-
-@media screen and (max-width: 768px) {
-    .main__container {
-        display: grid;
-        grid-template-columns: auto;
-        align-items: center;
-        justify-self: center;
-        width: 100%;
-        margin: 0 auto;
-        height: 90vh;
-    }
-
-    .main__content {
-        text-align: center;
-        margin-bottom: 4rem;
-    }
-
-    .main__content h1 {
-        font-size: 2.5rem;
-        margin-top: 2rem;
-    }
-
-    .main__content h2 {
-        font-size: 3rem;
-    }
-
-    .main__content p {
-        margin-top: 1rem;
-        font-size: 1.5rem;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .main__content h1 {
-        font-size: 2rem;
-        margin-top: 3rem;
-    }
-
-    .main__content h2 {
-        font-size: 2rem;
-    }
-
-    .main__content p {
-        margin-top: 2rem;
-        font-size: 1.5rem;
-    } 
-
-    .main__btn {
-        padding: 12px 36px;
-        margin: 2.5rem 0;
     }
 }
 
@@ -584,30 +435,54 @@
     width: 240px;
 }
 
-.fab:hover{
+.social__icon--link {
+    position: relative;
+}
+
+.tooltip {
+    visibility: hidden;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    width: 110px;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -55px;
+}
+
+.social__icon--link:hover .tooltip {
+    visibility: visible;
+    font-size: 1rem;
+}
+
+.discord:hover{
     color: #4267B2;
     transition: 0.5s ease-out;
-  }
+}
 
 .insta:hover{
-    color: #8a3ab9;
+    color: #df3dcc;
     transition: 0.5s ease-out;
-  }
+}
   
 .twitter:hover{
     color: #00acee;
     transition: 0.5s ease-out;
-  }
+}
 
 .linkedin:hover{
     color: #0077b5;
     transition: 0.5s ease-out;
-  }
+}
 
-.youtube:hover{
-    color: 	#FF0000;
+.github:hover{
+    color: #8a3ab9;
     transition: 0.5s ease-out;
-  }
+}
 
 
 @media screen and (max-width: 820px) {
