--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -117,6 +117,7 @@ body {
 @media screen and (max-width: 960px) {
     #navbar__logo {
         margin-right: 4rem;
+        margin-bottom: 9px;
     }
 
     .navbar__container {
