--- a/assets/css/ttt.css
+++ b/assets/css/ttt.css
@@ -29,9 +29,6 @@
 }
 
 .game__result {
-    color: #fff;
-    font-size: 20px;
-    text-align: center;
     margin-bottom: 10px;
 }
 
@@ -49,17 +46,21 @@
     background-color: #333333;
     padding: 20px;
     border-radius: 5px;
-    font-size: 5rem;
+    font-size: 3rem;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: font-size 1s cubic-bezier(0.1, 1, 1, 1);
+    transition: font-size 0.5s;
 }
 
-.board__square:active {
-    font-size: 1rem;
+.board__square.is-active {
+    font-size: 5rem;
+}
+
+.board__square.is-active.x {
+    font-size: 6rem;
 }
 
 .tic-tac-toe__button {
@@ -81,11 +82,11 @@
 
 .tic-tac-toe__button:hover {
     background-image: linear-gradient(to top, #c040ff 0%, #8080ff 100%);
-transition: all 0.3s ease;
+    transition: all 0.1s ease;
 }
 
-.tic-tac-toe__button:hover:after {
-    width: 100%;
+.tic-tac-toe__button:hover:active {
+    transform: scale(1.25);
 }
 
 
@@ -107,7 +108,15 @@ transition: all 0.3s ease;
     }
 
     .board__square {
+        font-size: 2.5rem;
+    }
+
+    .board__square.is-active {
         font-size: 4rem;
+    }
+    
+    .board__square.is-active.x {
+        font-size: 5rem;
     }
 
     .board {
