--- a/assets/css/ttt.css
+++ b/assets/css/ttt.css
@@ -24,8 +24,15 @@
 .game__info, .game__result {
     color: #fff;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     margin: 5px;
+}
+
+.game__info.x::first-letter, .game__result.x::first-letter {
+    font-size: 252px;
 }
 
 .game__result {
@@ -60,7 +67,7 @@
 }
 
 .board__square.is-active.x {
-    font-size: 6rem;
+    font-size: 7rem;
 }
 
 .tic-tac-toe__button {
@@ -116,7 +123,7 @@
     }
     
     .board__square.is-active.x {
-        font-size: 5rem;
+        font-size: 5.5rem;
     }
 
     .board {
