--- a/assets/css/ttt.css
+++ b/assets/css/ttt.css
@@ -51,19 +51,21 @@
 
 .board__square {
     background-color: #333333;
-    padding: 20px;
+    padding: 15px 20px 25px 20px;
     border-radius: 5px;
-    font-size: 3rem;
+    font-size: 4rem;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    transition: font-size 0.5s;
+    transition: 0.5s;
+    transition-property: font-size, padding;
 }
 
 .board__square.is-active {
-    font-size: 5rem;
+    font-size: 6rem;
+    padding: 10px 20px 30px 20px;
 }
 
 .tic-tac-toe__button {
@@ -111,11 +113,13 @@
     }
 
     .board__square {
-        font-size: 2.5rem;
+        font-size: 3rem;
+        padding: 15.5px 20px 24.5px 20px;
     }
 
     .board__square.is-active {
-        font-size: 4rem;
+        font-size: 4.5rem;
+        padding: 14px 20px 26px 20px;
     }
 
     .board {
