--- a/assets/css/about_me.css
+++ b/assets/css/about_me.css
@@ -34,7 +34,7 @@ body {
 .main__content h2 {
     font-size: 4rem;
     background-color: #ff8177;
-    background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
+    background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
