--- a/assets/css/security-awareness.css
+++ b/assets/css/security-awareness.css
@@ -149,12 +149,10 @@ body {
 
 
 #quiz {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     background-color: #141414;
-    margin-top: 2rem;
-    height: 90vh;
     scroll-margin: 10vh;
 }
 
@@ -163,15 +161,17 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    overflow: hidden;
     background-color: #222222;
-    width: 50%;
-    height: 90%;
-    margin: auto;
-    opacity: 1;
-    transition: opacity 3s ease;
+    width: 760px;
+    /* height: 80vh; */
+    max-height: 0;
+    margin: 2.5rem auto;
+    padding: 8vh 76px;
+    transition: opacity 2s ease, max-height 1s ease;
 }
 
-#quiz__container .fade {
+.fade {
     opacity: 0;
 }
 
@@ -180,7 +180,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30%;
+    width: 100%;
+    height: 20vh;
+    /* height: 30%; */
 }
 
 #quiz__title {
@@ -188,9 +190,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 8vh;
+    /* height: 50%; */
+}
+
+#quiz__title--content {
     color: #fff;
-    width: 80%;
-    height: 50%;
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
@@ -198,19 +204,31 @@ body {
 
 #quiz hr {
     margin: 1vh;
-    width: 80%;
+    width: 100%;
 }
 
 #quiz__question {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    height: 50%;
+    padding: 1vh 0 2vh;
+    width: 100%;
+    height: 12vh;
+    /* height: 50%; */
     color: #fff;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
+}
+
+#quiz__question a {
+    color: #fff;
+    text-decoration: none;
+}
+
+#quiz__question a:hover {
+    color: #f77062ee;
+    transition: color 0.75s ease;
 }
 
 #quiz__answers {
@@ -220,8 +238,9 @@ body {
     align-items: center;
     /* margin: 3vh auto; */
     padding: 5vh 0;
-    width: 80%;
-    height: 50%;
+    width: 100%;
+    height: 40vh;
+    /* height: 50%; */
     list-style-type: none;
 }
 
@@ -231,13 +250,14 @@ body {
     margin-top: 3%;
     padding: 1rem;
     width: 100%;
-    height: 20%;
+    height: 6vh;
+    /* height: 20%; */
     color: #fff;
-    border: 2px groove #333333;
+    border: 2px solid #454545;
     /* font-family: ""; */
     font-size: 1.2rem;
     font-weight: 550;
-    transition: background-color 0.5s ease, scale 0.5s ease;
+    transition: background-color 0.5s ease, scale 0.5s ease, box-shadow 0.5s ease;
 }
 
 #quiz__answers li:nth-child(1) {
@@ -250,6 +270,7 @@ body {
 
 .quiz__answers--choice:hover {
     background-color: #333333;
+    box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.50), 0 25px 60px 0 rgba(0, 0, 0, 0.40);
     scale: 1.025;
 }
 
@@ -259,11 +280,38 @@ body {
 }
 
 .quiz__answers--inactive {
-    background-color: #141414;
+    background-color: #181818;
+    cursor: default;
 }
+
+
+#quiz__results {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    /* align-items: center; */
+    /* padding: 5vh 0; */
+    width: 100%;
+    height: 40vh;
+    overflow-y: scroll;
+    /* height: 50%; */
+}
+
+#quiz__results::-webkit-scrollbar {
+    width: 0.375rem;
+}
+
+#quiz__results li {
+    padding: 0.5rem 0 0;
+    color: #fff;
+    text-align: left;
+    font-size: 1rem;
+}
+
 
 #info {
     background-color: #141414;
+    margin: 2rem 0;
     scroll-margin: 5rem;
     /* margin-top: 2rem; */
 }
