--- a/assets/css/ttt.css
+++ b/assets/css/ttt.css
@@ -6,7 +6,9 @@
 
 #tic-tac-toe__title {
     position: relative;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     font-size: 2.5rem;
     font-weight: bold;
     background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
@@ -16,10 +18,113 @@
     -moz-text-fill-color: transparent;
     cursor: pointer;
     overflow: hidden;
+    padding-bottom: 1rem;
     margin: 3vh auto 5px;
 }
 
-#tic-tac-toe__title::before {
+#tic-tac-toe__title span {
+    background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    position: relative;
+    top: 1rem;
+    animation: bounce 10s ease infinite normal;
+}
+
+#tic-tac-toe__title .span--active {
+    background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    transition: all 0.5s ease;
+}
+
+
+@keyframes bounce {
+    2% {
+        top: 0;
+    }
+    4% {
+        top: 1rem;
+    }
+}
+
+#tic-tac-toe__title span:nth-child(1) {
+    animation-delay: 0ms;
+}
+
+#tic-tac-toe__title span:nth-child(2) {
+    animation-delay: 50ms;
+}
+
+#tic-tac-toe__title span:nth-child(3) {
+    animation-delay: 100ms;
+}
+
+#tic-tac-toe__title span:nth-child(4) {
+    animation-delay: 150ms;
+}
+
+#tic-tac-toe__title span:nth-child(5) {
+    animation-delay: 200ms;
+}
+
+#tic-tac-toe__title span:nth-child(6) {
+    animation-delay: 250ms;
+}
+
+#tic-tac-toe__title span:nth-child(7) {
+    animation-delay: 300ms;
+}
+
+#tic-tac-toe__title span:nth-child(8) {
+    animation-delay: 350ms;
+}
+
+#tic-tac-toe__title span:nth-child(9) {
+    animation-delay: 400ms;
+}
+
+#tic-tac-toe__title span:nth-child(10) {
+    animation-delay: 450ms;
+}
+
+#tic-tac-toe__title span:nth-child(11) {
+    animation-delay: 500ms;
+}
+
+#tic-tac-toe__title span:nth-child(12) {
+    animation-delay: 550ms;
+}
+
+#tic-tac-toe__title span:nth-child(13) {
+    animation-delay: 600ms;
+}
+
+#tic-tac-toe__title span:nth-child(14) {
+    animation-delay: 650ms;
+}
+
+#tic-tac-toe__title span:nth-child(15) {
+    animation-delay: 700ms;
+}
+
+#tic-tac-toe__title span:nth-child(16) {
+    animation-delay: 750ms;
+}
+
+#tic-tac-toe__title span:nth-child(17) {
+    animation-delay: 800ms;
+}
+
+#tic-tac-toe__title span:nth-child(18) {
+    animation-delay: 850ms;
+}
+
+/* #tic-tac-toe__title::before {
     position: absolute;
     content: attr(data-content);
     top: 0;
@@ -37,7 +142,7 @@
 
 #tic-tac-toe__title:hover::before {
     width: 100%;
-}
+} */
 
 
 #tic-tac-toe__difficulty {
@@ -56,7 +161,15 @@
     margin-bottom: 1rem;
 }
 
-#tic-tac-toe__difficulty::before {
+#tic-tac-toe__difficulty:hover {
+    background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+/* #tic-tac-toe__difficulty::before {
     position: absolute;
     content: attr(data-content);
     top: 0;
@@ -74,7 +187,7 @@
 
 #tic-tac-toe__difficulty:hover::before {
     width: 100%;
-}
+} */
 
 
 
