--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -1,10 +1,10 @@
-.tic-tac-toe {
+.tic-tac-toe, .connect-4 {
     background-color: #141414;
     color: #141414;
     text-align: center;
 }
 
-#tic-tac-toe__title {
+#game__title {
     position: relative;
     display: inline-flex;
     justify-content: center;
@@ -12,6 +12,7 @@
     font-size: 2.5rem;
     font-weight: bold;
     background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -22,8 +23,9 @@
     margin: 3vh auto 5px;
 }
 
-#tic-tac-toe__title span {
+#game__title span {
     background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -33,8 +35,9 @@
     animation: bounce 10s ease infinite normal;
 }
 
-#tic-tac-toe__title .span--active {
+#game__title .span--active {
     background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -52,106 +55,86 @@
     }
 }
 
-#tic-tac-toe__title span:nth-child(1) {
+#game__title span:nth-child(1) {
     animation-delay: 5000ms;
 }
 
-#tic-tac-toe__title span:nth-child(2) {
+#game__title span:nth-child(2) {
     animation-delay: 5050ms;
 }
 
-#tic-tac-toe__title span:nth-child(3) {
+#game__title span:nth-child(3) {
     animation-delay: 5100ms;
 }
 
-#tic-tac-toe__title span:nth-child(4) {
+#game__title span:nth-child(4) {
     animation-delay: 5150ms;
 }
 
-#tic-tac-toe__title span:nth-child(5) {
+#game__title span:nth-child(5) {
     animation-delay: 5200ms;
 }
 
-#tic-tac-toe__title span:nth-child(6) {
+#game__title span:nth-child(6) {
     animation-delay: 5250ms;
 }
 
-#tic-tac-toe__title span:nth-child(7) {
+#game__title span:nth-child(7) {
     animation-delay: 5300ms;
 }
 
-#tic-tac-toe__title span:nth-child(8) {
+#game__title span:nth-child(8) {
     animation-delay: 5350ms;
 }
 
-#tic-tac-toe__title span:nth-child(9) {
+#game__title span:nth-child(9) {
     animation-delay: 5400ms;
 }
 
-#tic-tac-toe__title span:nth-child(10) {
+#game__title span:nth-child(10) {
     animation-delay: 5450ms;
 }
 
-#tic-tac-toe__title span:nth-child(11) {
+#game__title span:nth-child(11) {
     animation-delay: 5500ms;
 }
 
-#tic-tac-toe__title span:nth-child(12) {
+#game__title span:nth-child(12) {
     animation-delay: 5550ms;
 }
 
-#tic-tac-toe__title span:nth-child(13) {
+#game__title span:nth-child(13) {
     animation-delay: 5600ms;
 }
 
-#tic-tac-toe__title span:nth-child(14) {
+#game__title span:nth-child(14) {
     animation-delay: 5650ms;
 }
 
-#tic-tac-toe__title span:nth-child(15) {
+#game__title span:nth-child(15) {
     animation-delay: 5700ms;
 }
 
-#tic-tac-toe__title span:nth-child(16) {
+#game__title span:nth-child(16) {
     animation-delay: 5750ms;
 }
 
-#tic-tac-toe__title span:nth-child(17) {
+#game__title span:nth-child(17) {
     animation-delay: 5800ms;
 }
 
-#tic-tac-toe__title span:nth-child(18) {
+#game__title span:nth-child(18) {
     animation-delay: 5850ms;
 }
 
-/* #tic-tac-toe__title::before {
-    position: absolute;
-    content: attr(data-content);
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    overflow: hidden;
-    transition: width 0.5s;
-    width: 0;
-    white-space: nowrap;
-}
-
-#tic-tac-toe__title:hover::before {
-    width: 100%;
-} */
-
-
-#tic-tac-toe__difficulty {
+#game__difficulty {
     position: relative;
     display: none;
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
     background-image: linear-gradient(to top, #b72144 0%, #ffb199 100%);
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -161,35 +144,14 @@
     margin-bottom: 1rem;
 }
 
-#tic-tac-toe__difficulty:hover {
+#game__difficulty:hover {
     background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
+    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
 }
-
-/* #tic-tac-toe__difficulty::before {
-    position: absolute;
-    content: attr(data-content);
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(to top, #b721ff 0%, #20E0FF 100%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    overflow: hidden;
-    transition: width 0.5s;
-    width: 0;
-    white-space: nowrap;
-}
-
-#tic-tac-toe__difficulty:hover::before {
-    width: 100%;
-} */
-
-
 
 #game__info, #game__result {
     color: #fff;
@@ -199,44 +161,11 @@
     margin: 5px;
 }
 
-#game__info::first-letter, #game__result::first-letter {
-    font-size: 30px;
-}
-
 .game__result {
     margin-bottom: 10px;
 }
 
-.board {
-    display: grid;
-    grid-template-columns: 9rem 9rem 9rem;
-    grid-template-rows: 9rem 9rem 9rem;
-    grid-gap: 5px;
-    justify-content: center;
-    background-color: #141414;
-    padding: 10px;
-}
-
-.board__square {
-    background-color: #333333;
-    padding: 15px 20px 25px 20px;
-    border-radius: 5px;
-    font-size: 4rem;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    transition: 0.5s;
-    transition-property: font-size, padding;
-}
-
-.board__square.is-active {
-    font-size: 6rem;
-    padding: 10px 20px 30px 20px;
-}
-
-.tic-tac-toe__reset {
+.game__reset {
     font-size: 1rem;
     background-image: linear-gradient(to top, #a060ff 0%, #60a0ff 100%);
     padding: 10px 22px;
@@ -253,45 +182,141 @@
     outline: none;
 }
 
-.tic-tac-toe__reset:hover {
+.game__reset:hover {
     background-image: linear-gradient(to top, #c040ff 0%, #8080ff 100%);
     transition: all 0.1s ease;
 }
 
-.tic-tac-toe__reset:hover:active {
+.game__reset:hover:active {
     transform: scale(1.25);
+}
+
+@media screen and (max-width: 960px) {
+    #game__title {
+        font-size: 2.2rem;
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #game__title {
+        font-size: 2rem;
+    }
+}
+
+
+/* tic-tac-toe */
+
+.tic-tac-toe #game__info::first-letter, .tic-tac-toe #game__result::first-letter {
+    font-size: 30px;
+}
+
+.tic-tac-toe .board {
+    display: grid;
+    grid-template-columns: 9rem 9rem 9rem;
+    grid-template-rows: 9rem 9rem 9rem;
+    grid-gap: 5px;
+    justify-content: center;
+    background-color: #141414;
+    padding: 10px;
+}
+
+.tic-tac-toe .board__square {
+    background-color: #333333;
+    padding: 15px 20px 25px 20px;
+    border-radius: 5px;
+    font-size: 4rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.5s;
+    transition-property: font-size, padding;
+}
+
+.tic-tac-toe .board__square.is-active {
+    font-size: 6rem;
+    padding: 10px 20px 30px 20px;
 }
 
 
 @media screen and (max-width: 960px) {
-    #tic-tac-toe__title {
-        font-size: 2.2rem;
-        margin-top: 2rem;
-    }
-
-    .board {
+    .tic-tac-toe .board {
         grid-template-columns: 8rem 8rem 8rem;
         grid-template-rows: 8rem 8rem 8rem;
     }
 }
 
 @media screen and (max-width: 480px) {
-    #tic-tac-toe__title {
-        font-size: 2rem;
-    }
-
-    .board__square {
+    .tic-tac-toe .board__square {
         font-size: 3rem;
         padding: 15.5px 20px 24.5px 20px;
     }
 
-    .board__square.is-active {
+    .tic-tac-toe .board__square.is-active {
         font-size: 4.5rem;
         padding: 14px 20px 26px 20px;
     }
 
-    .board {
+    .tic-tac-toe .board {
         grid-template-columns: 7rem 7rem 7rem;
         grid-template-rows: 7rem 7rem 7rem;
+    }
+}
+
+
+/* connect-4 */
+
+.connect-4 .board {
+    display: table;
+    box-sizing: border-box;
+    border-color: white;
+    border-spacing: 6px;
+    margin: 1rem auto;
+    position: relative;
+    z-index: 3;
+}
+
+.connect-4 .board tbody {
+    display: table-row-group;
+    vertical-align: middle;
+    border-color: inherit;
+}
+
+.connect-4 .board__row {
+    display: table-row;
+    vertical-align: inherit;
+    border-color: inherit;
+}
+
+.connect-4 .board__cell {
+    display: table-cell;
+    height: 4rem;
+    width: 4rem;
+    position: relative;
+    vertical-align: top;
+    background-color: #333333;
+    border-radius: 2rem;
+    border: solid 2px #303030;
+    cursor: pointer;
+}
+
+.connect-4 .board__cell.is-active {
+    transition: background-color 1s;
+}
+
+
+@media screen and (max-width: 960px) {
+    .connect-4 .board__cell {
+        height: 3.5rem;
+        width: 3.5rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .connect-4 .board__cell {
+        height: 3rem;
+        width: 3rem;
     }
 }
